# xmbedinit

./: .gitignore  LICENSE  README.md  setup.py
xmbedinit/: xmbedinit.py
xmbedinit/templates/: CMakeLists-template.txt  CMakeLists.txt  build-compile_commands.bat  build-compile_commands.sh  build-debug.sh  build-release.bat  build-release.sh  build.sh  generated_by.txt  main.cpp  mbed.cmake  toolchain-arm-none-eabi-gcc.cmake
